# ratpac-coherent

./: .gitmodules  CMakeLists.txt  README.md  configure
RAT/: CMakeLists.txt
RAT/DB/: CMakeLists.txt  DB.cc  DB.hh  DBExceptions.hh  DBJsonLoader.cc  DBJsonLoader.hh  DBLink.cc  DBLink.hh  DBTable.cc  DBTable.hh  DBTextLoader.cc  DBTextLoader.hh  HTTPDownloader.cc  LinkDef.hh
RAT/DS/: CMakeLists.txt  LinkDef.hh  MCPMT.hh  MCTrack.hh  RunStore.cc
RAT/base/: CMakeLists.txt  EventInfo.hh  GLG4StringUtil.cc  GLG4StringUtil.hh  HashFunc.hh  Log.cc  PolygonOrientation.cc  ProcBlock.cc  ProcBlock.hh  Processor.cc  Producer.cc  ReadFile.cc  Sampling.cc  SignalHandler.cc  StringUtil.cc  TrackInfo.cc  TrackInfo.hh
RAT/chroma/: CMakeLists.txt  ChromaInterface.cc
RAT/cmd/: CMakeLists.txt  ChromaInterfaceMessenger.cc  CoincidenceMessenger.cc  CoincidenceMessenger.hh  DBMessenger.cc  DBMessenger.hh  ESgenMessenger.cc  GLG4DebugMessenger.cc  GLG4DebugMessenger.hh  GLG4PrimaryGeneratorMessenger.cc  GLG4VisMessenger.cc  GLG4VisMessenger.hh  PhysicsListMessenger.cc  ProcBlockManager.cc  ProcBlockManager.hh  ReacIBDgenMessenger.cc  TrackingMessenger.cc
RAT/core/: CMakeLists.txt  ConstructUserProc.cc  CountProc.cc  CountProc.hh  EventInfo.hh  GLG4SteppingAction.cc  GLG4SteppingAction.hh  GLG4VEventAction.cc  GLG4VisManager.cc  GLG4VisManager.hh  Gsim.cc  Gsim.hh  Log.hh  Producer.cc  PruneProc.cc  PruneProc.hh  PythonProc.cc  PythonProc.hh  RunManager.cc  RunManager.hh  TrackInfo.cc  TrackInfo.hh  Trajectory.cc
RAT/daq/: CMakeLists.txt  MiniCleanPMTCharge.cc  MiniCleanPMTCharge.hh  PDFPMTCharge.cc  PDFPMTCharge.hh  PDFPMTTime.cc  PDFPMTTime.hh  PMTTime.hh  SimpleDAQProc.cc  SimpleDAQProc.hh
RAT/fit/: CMakeLists.txt  FitCentroidProc.cc  FitCentroidProc.hh  FitPathProc.cc  FitPathProc.hh  MiniSim.cc
RAT/geo/: BWVetGenericChamber.cc  BWVetGenericChamber.hh  CMakeLists.txt  ConeWaveguideConstruction.cc  ConeWaveguideFactory.cc  ConeWaveguideFactory.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorFactory.cc  DetectorFactory.hh  GLG4BoxSD.cc  GLG4PMTSD.cc  GLG4SimpleOpDetSD.cc  GLG4SimpleOpDetSD.hh  GLG4TestSolid.cc  GLG4TorusStack.cc  GeoBoxFactory.cc  GeoBoxFactory.hh  GeoBubbleFactory.cc  GeoBubbleFactory.hh  GeoBuilder.cc  GeoBuilder.hh  GeoConvexLensFactory.cc  GeoConvexLensFactory.hh  GeoCutTubeFactory.cc  GeoCutTubeFactory.hh  GeoFactory.cc  GeoFactory.hh  GeoLensFactory.cc  GeoLensFactory.hh  GeoPMTArrayFactory.cc  GeoPMTArrayFactory.hh  GeoPMTCoverageFactory.cc  GeoPMTCoverageFactory.hh  GeoPMTFactoryBase.cc  GeoPMTFactoryBase.hh  GeoPMTParser.cc  GeoPMTParser.hh  GeoPerfBoxFactory.cc  GeoPerfBoxFactory.hh  (+50 more)
RAT/io/: CMakeLists.txt  DSReader.cc  DSWriter.cc  InNetProducer.cc  InNetProducer.hh  InROOTProducer.cc  InROOTProducer.hh  LinkDef.hh  OutNetProc.cc  OutNetProc.hh  OutROOTProc.cc  OutROOTProc.hh  TrackCursor.cc  TrackCursor.hh  TrackNav.cc  TrackNav.hh
RAT/physics/: BNLOpWLS.cc  BNLOpWLSBuilder.cc  BNLOpWLSData.cc  CMakeLists.txt  G4OpWLSBuilder.cc  GLG4OpAttenuation.hh  GLG4PMTOpticalModel.cc  GLG4Scint.cc  GLG4Scint.hh  PhotonThinning.cc  PhysicsList.cc  PhysicsListFast.cc
RAT/sim/: CMakeLists.txt  ConstructUserProc.cc  CountProc.hh  GLG4SteppingAction.cc  GLG4VEventAction.cc  Gsim.cc  Log.cc  ProcBlock.cc  ProcBlock.hh  Processor.cc  PruneProc.cc  SignalHandler.cc  Trajectory.cc
RAT/stlplus/: CMakeLists.txt  debug.cc  debug.hpp  hash.hpp  hash.tpp  persistent.cc  persistent.hpp  persistent.tpp  smart_ptr.hpp  smart_ptr.tpp  string_utilities.cc  string_utilities.hpp
RAT/util/: CMakeLists.txt  GaussianRatioPDF.cc  MultiChargeDist.cc  PolygonOrientation.cc  ReadFile.cc  Sampling.cc  SimpsIntegral.cc  StringUtil.cc
cmake/: Config.cmake.in
data/: OPTICS.ratdb
data/data/flatdot/examples/: collimator-bnara.geo
data/lar1ton/: PMTINFO.ratdb  constants.xml  idwall_sipm_panel_array_placements.xml  idwall_sipm_panel_constants_root.xml  idwall_sipm_panel_placements.xml  idwall_sipm_panel_positions.xml  lar1ton.geo  lar1ton_pmt_and_sipm.gdml  materials.xml  pmt_hemisphere_constants.xml  pmt_hemisphere_placements.xml  pmt_hemisphere_solids.xml  pmt_hemisphere_volumes.xml  pmt_hemisphere_volumes_uncoated.xml  pmt_placement.xml  pmt_positions.xml  pmt_sipm_endcap_placements.xml  pmt_sipm_endcap_positions.xml  pmt_sipm_endcap_subtraction.xml  pmt_sipm_hole_positions.xml  sipm_array.gdml  vis_lar1ton.mac
data/nudotv1/: nudotv1.gdml
data/sipm_array_test/: constants.xml  idwall_sipm_panel_solids.xml  sipm_array.gdml
mac/: lar1ton.mac  nudot.mac  sipm_example.mac  vis.mac
mac/flatdot/examples/: flatdot_e.mac  simple.C  vis.mac
mac/mac/flatdot/examples/: flatdot_geo.mac
