add_subdirectory(stlplus)
add_subdirectory(DS)
add_subdirectory(base)
add_subdirectory(DB)
add_subdirectory(daq)
add_subdirectory(gen)
add_subdirectory(io)
add_subdirectory(fit)

# clean until below
add_subdirectory(physics)

#add_subdirectory(util)

add_subdirectory(geo)

add_subdirectory(core)

add_subdirectory(cmd)

add_subdirectory(chroma)
